prevent collapsing of display p tags on text being deleted

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
     background-color: lightgrey;
     border: 0;
     box-sizing: border-box;
-    padding: 4px 16px;
+    padding: 6px 16px;
     border-radius: 0.4rem;
     margin-bottom: 40px;
     box-shadow: 1px 1px 20px lightgray;
@@ -33,8 +33,10 @@ body {
 }
 
 .display p {
+    margin-bottom: 0px;
     margin-top: 15px;
     padding: 0px;
+    min-height: 2rem;
 }
 
 #history {
